exploing new css properties

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section class="gold-bkg pg-padding">
             <div>
-                <img src="images/Scooter.svg" alt="Scooter Spaceship">
+                <img src="images/Scooter.svg" alt="Scooter Spaceship" class="scooter">
                 <h2>SCOOTER</h2>
             </div>
             <div>
